Teams page overlapping navbar bug fixed

--- a/frontend/src/components/Navbar.module.css
+++ b/frontend/src/components/Navbar.module.css
@@ -5,6 +5,7 @@
   align-items: flex-end;
   position: fixed;
   width: 100%;
+  z-index: 10;
 }
 
 .container {
